--- a/Tetris/web/tetris.html
+++ b/Tetris/web/tetris.html
@@ -2,37 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tetris</title>
+    <title>Tetris by Piskunov</title>
     <link rel='stylesheet' type="text/css" href='../css/tetris.css'/>
 </head>
 <body>
-
-<div id="main">
-    <div id="left">
-        <div id="head" align="center">
-            TETRIS
-        </div>
-        <div id = "texts">
-            <div id="rules">
-                Arrow Up - turn<br>
-                Arrow Left/Right - move<br>
-                Arrow Down - down<br>
+<div id="backgroundImageParent">
+    <div id="backgroundImage">
+        <div id="everything">
+            <div id="left">
+                <div id = "texts">
+                    <div id="controls">
+                        Arrow Up - turn <br>
+                        Arrow Left/Right - move <br>
+                        Arrow Down - down <br>
+                    </div>
+                    <div id="info">
+                    </div>
+                    <div id="surrenderButton">
+                        <button type="button" onclick="gameOver()">Surrender</button>
+                    </div>
+                </div>
+                <div style="text-align: center;">
+                    Next figure: <br>
+                    <canvas id="nextfigure"></canvas>
+                </div>
             </div>
-            <div id="info">
+            <div id="right">
+                <canvas id="tetrisfield"></canvas>
             </div>
-            <button type="button" onclick="resetRecords()">Reset records</button>
-            <button type="button" onclick="gameOver()">Finish game</button>
         </div>
-        <div id="next">
-            Next figure: <br>
-            <canvas id="nextfigure"></canvas>
-        </div>
-    </div>
-    <div id="right">
-        <canvas id="tetrisfield"></canvas>
     </div>
 </div>
-
 </body>
 <script src="../src/canvas.js"></script>
 <script src="../src/figure.js"></script>
