All this tetris belongs to me

--- a/Tetris/web/index.html
+++ b/Tetris/web/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="loginParent">
     <div id = "login">
-        <form action="web/tetris.html" method="get">
+        <form action="./tetris.html" method="get">
                     <div class="loginText">Welcome to the new Tetris</div>
                     <p class="loginText"><label for="name"></label><input placeholder="Tell us your name" type="text" id="name"></p>
                     <input type="submit" value="Let's Play!" onclick="saveName()">
