--- a/Tetris/web/tetris.html
+++ b/Tetris/web/tetris.html
@@ -22,7 +22,7 @@
                         <button type="button" onclick="gameOver()">Surrender</button>
                     </div>
                 </div>
-                <div style="text-align: center;">
+                <div style="text-align: center; color: chartreuse;">
                     Next figure: <br>
                     <canvas id="nextfigure"></canvas>
                 </div>
